// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseSwitch.vue snapshots: should match snapshot if active 1`] = `
<div
  class="mfn-field mfnf-checkbox active"
>
  <div
    class="switch"
    data-name="testField"
  >
    <span
      class="path"
      data-name="testField"
    />
     
    <span
      class="handle"
      data-name="testField"
    />
  </div>
   
  <label>
    test switch
  </label>
</div>
`;

exports[`BaseSwitch.vue snapshots: should match snapshot if inactive 1`] = `
<div
  class="mfn-field mfnf-checkbox"
>
  <div
    class="switch"
    data-name="testField"
  >
    <span
      class="path"
      data-name="testField"
    />
     
    <span
      class="handle"
      data-name="testField"
    />
  </div>
   
  <label>
    test switch
  </label>
</div>
`;
